# hermes-infi-webui

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Hermes-AI发布前讨论会资料汇总.md  LED显示屏物料编码手册.md  README.md  README_EN.md  restart-api.sh  review-fndxnm.md  start-agent.sh
backend/: .env.example  pyproject.toml
backend/agent_runner/: acp_client.py  acp_persona.py  discovery.py  metrics.py  runner.py  runner_chain.py  runner_clarify.py  runner_conversation_summary.py  runner_docling_upgrade.py  runner_memory.py  runner_profile_evolution.py  runner_roundtable.py  runner_scheduled.py  runner_skill_evolution.py  runner_subagent.py  runner_task_execution.py  session_pool.py  storage.py  subagent_pool.py  workspace_watcher.py
backend/alembic/versions/: 0015_shared_profiles.py  (+50 more)
backend/app/: config.py  deps.py  main.py
backend/scripts/: backfill_embeddings.py
backend/skill_evolution/: __init__.py  dataset.py  metric.py  optimizer.py  profile_optimizer.py  signatures.py
backend/tests/: conftest.py  test_acp_event_fixes.py  test_acp_read_file.py  test_acp_read_loop.py  test_agent_features.py  test_api_endpoints_v2.py  test_auth_revocation.py  test_branding.py  test_docling.py  test_file_protection.py  test_file_security.py  test_group_chat.py  test_iteration_breaker.py  test_kb_doc_versions.py  test_knowledge_doc_upload.py  test_layered_memory.py  test_mcp_wiring.py  test_media_ticket.py  test_memory_consolidate.py  test_moa_dispatch.py  test_negative_cases.py  test_office_extract.py  test_project_loop.py  test_rag_v2.py  test_roundtable_clarify_guard.py  test_runner_chain.py  test_runner_research.py  test_security_hardening.py  test_session_pool_profile.py  test_skill_evolution_d1.py  test_skill_evolution_d2.py  test_skill_evolution_dataset.py  test_skill_evolution_e.py  test_skill_firings.py  test_storage_cleanup.py  test_subagent_pool.py  test_summary_pipeline.py  test_tool_risk_guard.py  test_workspace_versions.py
(+205 files in other folders)
