[project]
name = "hermes-backend"
version = "0.1.0"
description = "Hermes 信使 — production backend (FastAPI + PostgreSQL + Redis + ACP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "boto3>=1.34",
    "ldap3>=2.9",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "croniter>=2.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "watchdog>=6.0",
    # Self-evolving skills optimizer (backend/skill_evolution/) only — never
    # imported by the FastAPI app or the ACP-serving runner paths. Note:
    # PyPI's `dspy-ai` is now just a compatibility alias for this package;
    # `dspy` is the real, current distribution.
    "dspy>=3.2.1",
    # Vector retrieval (P1-1 RAG). pgvector gives the SQL Vector type + HNSW
    # cosine index; sentence-transformers loads the local bge-small-zh model
    # (~95MB, pulls torch CPU ~200MB on first install). Both optional at
    # runtime — rag_enabled defaults to False.
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "moto>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
